hisi: adjust rules and sdk env